<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipTax"
    android:gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prix_initial" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:id="@+id/initPrice"
        android:textSize="20sp"
        android:inputType="number"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="2"
            android:scaleY="2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:id="@+id/taxSwitch"
            android:checked="true"
            android:onClick="taxSwitch"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxfinal"
        android:id="@+id/taxText"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="2"
            android:scaleY="2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:id="@+id/tipSwitch"
            android:checked="true"
            android:onClick="tipsChanged"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipsTitle"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RadioGroup
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:id="@+id/radioGroup">
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_15"
          android:id="@+id/Tip1"
          android:checked="true"
          android:onClick="tipsChanged"
          />
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/Tip2"
          android:text="@string/_20"
          android:onClick="tipsChanged"/>
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/Tip3"
          android:text="@string/_25"
          android:onClick="tipsChanged"/>
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/Tip4"
          android:text="@string/OtherTaxPerc"
          android:onClick="tipsChanged"/>
    </RadioGroup>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/otherperc"
        android:id="@+id/otherTip"
        android:textSize="20sp"
        android:inputType="number"
        android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips"
        android:id="@+id/tipsText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text=""
        android:id="@+id/totalValue"
        android:layout_marginTop="25dp"/>
</LinearLayout>